# test-py_repo

./: .env  pyproject.toml  requirements.txt  sql_app.db
migrations/: env.py
migrations/versions/: 06012024_add_operation.py  4d20a1a45d1b_database_creation.py  4fd736f21064_add_messages_model.py  5f334a5074db_auth.py
src/: config.py  database.py  main.py
src/auth/: manager.py  models.py  schemas.py  utils.py
src/chat/: model.py  router.py
src/items/: router.py  schemas.py
src/operations/: models.py  router.py  schemas.py
src/pages/: router.py
src/tasks/: router.py
src/templates/: base.html  chat.html  search.html
